--- a/website/frontend/src/components/pages/Program/Program.module.scss
+++ b/website/frontend/src/components/pages/Program/Program.module.scss
@@ -177,3 +177,8 @@
     }
   }
 }
+
+.input {
+  display: grid;
+  grid-template-columns: 165px 1fr;
+}
